# RL

./: AGENTS.md  pyproject.toml
.github/workflows/: cicd-main.yml
docs/: broken_links_false_positives.json
docs/design-docs/: chat-datasets.md
docs/guides/: sft.md  yarn-long-context.md
examples/: run_off_policy_distillation.py
examples/configs/: distillation_math.yaml  dpo.yaml  grpo_math_1B.yaml  off_policy_distillation.yaml  rm.yaml  sft.yaml
examples/configs/recipes/llm/: grpo-qwen2.5-math-1.5b-instruct-1n2g-fsdp2tp1-sglang.yaml  sft-qwen3-0.6B-1n8g-megatron-yarn-128k.yaml
examples/configs_for_test/: README.md  cross_tokenizer_distillation_llama1b_qwen8b_off-policy-distillation-gh.yaml  cross_tokenizer_distillation_llama1b_qwen8b_refactored.yaml
examples/nemo_gym/: run_grpo_nemo_gym.py
infra/: README.md
infra/examples/: disagg-jobset.yaml  disagg-rayclusters.yaml  endpoint-registry-rbac.yaml  gym_standalone_config.yaml  kai-queue-prod.yaml  kai-queue.yaml  kai-topology.yaml  monolithic-jobset.yaml  rayjob-monolithic-64n.yaml  rayjob-monolithic.yaml
infra/helm/: helmfile.yaml
infra/helm/values/: kai-scheduler.yaml  kuberay-operator.yaml  nvidia-device-plugin.yaml
infra/kind/: create-cluster.sh  get-helm.sh  get-kubectl.sh  install-nvkind.sh  nvkind-config-template.yaml  nvkind-config-values-dev.yaml
infra/nrl_k8s/: README.md  pyproject.toml
infra/nrl_k8s/examples/: qwen3_30b_math_4n_4gpu.gb300.infra.yaml
infra/nrl_k8s/src/nrl_k8s/: __init__.py  _logging.py  _retry.py  cli.py  config.py  dev.py  inspect.py  k8s.py  manifest.py  orchestrate.py  rayjob.py  schema.py  submit.py  workdir.py
infra/nrl_k8s/src/nrl_k8s/defaults/: defaults.example.yaml
infra/nrl_k8s/src/nrl_k8s/submitters/: __init__.py  exec_.py  portforward.py
infra/nrl_k8s/tests/unit/: test_cli.py  test_config.py  test_inspect.py  test_k8s.py  test_manifest.py  test_orchestrate.py  test_rayjob.py  test_schema.py  test_submit.py  test_submitters.py  test_workdir.py
nemo_rl/algorithms/: async_utils.py  grpo.py  off_policy_distillation.py
nemo_rl/algorithms/loss/: __init__.py  loss_functions.py
nemo_rl/algorithms/x_token/: __init__.py  tokenalign.py
nemo_rl/data/: llm_message_utils.py  processors.py
nemo_rl/data/datasets/response_datasets/: __init__.py  arrow_text_dataset.py
nemo_rl/distributed/: model_utils.py  virtual_cluster.py
nemo_rl/environments/: nemo_gym.py
nemo_rl/experience/: rollouts.py
nemo_rl/models/automodel/: train.py
nemo_rl/models/generation/sglang/: sglang_generation.py
nemo_rl/models/policy/: __init__.py  lm_policy.py
nemo_rl/models/policy/workers/: dtensor_policy_worker.py  dtensor_policy_worker_v2.py  megatron_policy_worker.py
nemo_rl/utils/: venvs.py
nemo_rl/utils/x_token/: minimal_projection_generator.py  minimal_projection_via_multitoken.py  reapply_exact_map.py  sort_and_cut_projection_matrix.py
research/template_project/configs/: grpo_math_1B.yaml
skills/launch-nemo-rl/: SKILL.md
tests/test_suites/: nightly.txt
tests/test_suites/llm/: sft-qwen3-0.6B-1n8g-megatron-yarn-128k.sh
tests/unit/: L0_Unit_Tests_Generation.sh  excluded_unit_tests.sh
tests/unit/algorithms/: test_async_utils.py
tests/unit/environments/: test_nemo_gym.py
tests/unit/experience/: test_rollouts.py
tests/unit/models/policy/: test_megatron_worker.py
